--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,6 +1,8 @@
 version: 0.1
 phases:
   install:
+    runtime-versions:
+     nodejs: 10
     commands:
       - aws cloudformation package --template-file samTemplate.yaml --s3-bucket pdomala-lambda-pipeline --output-template-file outputSamTemplate.yaml
 artifacts:
